# ai-super-app-desktop

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
apps/desktop/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: computer.rs  lib.rs  main.rs  memory.rs
apps/desktop/src/app/: agent-loop.ts  builtin-modules.ts  module-bootstrap.ts  module-sandbox.ts  (+1 more)
apps/web/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.html  main.tsx  vite-env.d.ts
docs/: acting-architecture.md  architecture.md  capability-enforcement.md  capability-model.md  codebase.md  cost-calculation-model.md  dependency-rules.md  desktop-architecture.md  execution-desktop-flow.md  execution-lifecycle.md  governance-architecture.md  ipc-contracts.md  local-storage-layout.md  memory-model.md  metrics-storage-layout.md  multi-agent-protocol.md  oauth-backend.md  observability-design.md  planning-architecture.md  platform-composition.md  plugin-system.md  product-concept.md  real-world-agent-model.md  security-model.md  technical-architecture.md  technical-design.md  testing-framework.md  token-monitoring-architecture.md  vision.md  workspace-isolation.md
modules/crypto/: manifest.json  package.json
modules/crypto/src/: index.ts  tools.ts
modules/writing-helper/: package.json  tsconfig.json
modules/writing-helper/src/: index.ts  tools.ts
scripts/: update-docs.py
(+264 files in other folders)
