[package]
name            = "ai-super-app"
version         = "1.0.0"
description     = "AI SuperApp Desktop"
authors         = ["AI SuperApp Team"]
edition         = "2021"
rust-version    = "1.77"

[lib]
name       = "ai_super_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-os    = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
reqwest           = { version = "0.12", features = ["json", "stream"] }
tokio             = { version = "1", features = ["full"] }
futures-util      = "0.3"
# ── Computer-use ──────────────────────────────────────────────────────────────
enigo       = "0.2"            # cross-platform mouse/keyboard control
screenshots = "0.8"            # cross-platform screen capture
image       = { version = "0.24", default-features = false, features = ["png"] }  # PNG encoding for screenshots
base64      = "0.22"           # encode screenshot bytes to base64 data URI
arboard     = "3"              # cross-platform clipboard read/write
# ── Local memory (SQLite) ─────────────────────────────────────────────────────
rusqlite    = { version = "0.31", features = ["bundled"] }  # embedded SQLite, no system dep
uuid        = { version = "1", features = ["v4"] }           # memory entry IDs
chrono      = { version = "0.4", features = ["serde"] }      # timestamps

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
